# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-id"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.readme]
title = "ASIMOV.rs: Identifier Types"

[features]
default = ["all", "std"]
all = ["encodings"]
std = ["asimov-core/std", "bs58/std", "data-encoding?/std", "ed25519-dalek?/std"]
tracing = []
unstable = []

# Features:
encodings = ["base64", "hex", "z32"]
base64 = ["dep:data-encoding"]
hex = ["dep:data-encoding"]
z32 = ["dep:data-encoding", "dep:data-encoding-macro"]

# Interoperability:
clap = ["dep:clap"]
ed25519 = ["ed25519-dalek"]
ed25519-dalek = ["dep:ed25519-dalek"]
eloquent = ["dep:eloquent"]
iroh = ["dep:iroh"]
libsql = ["dep:libsql"]
p2panda = ["dep:p2panda-core"]
rocket = ["dep:rocket"]
serde = ["dep:serde"]
turso = ["dep:turso"]

[dependencies]
asimov-core.workspace = true
bs58.workspace = true
derive_more = { workspace = true, features = ["display", "from_str"] }
thiserror.workspace = true

# Features:
data-encoding = { workspace = true, optional = true }
data-encoding-macro = { workspace = true, optional = true }

# Interoperability:
clap = { workspace = true, features = ["derive", "std"], optional = true }
ed25519-dalek = { workspace = true, optional = true }
eloquent = { workspace = true, optional = true }
iroh = { workspace = true, optional = true }
libsql = { workspace = true, optional = true }
p2panda-core = { workspace = true, optional = true }
rocket = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
turso = { workspace = true, optional = true }

# Preview locally with: RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
