[package]
name = "asimov-installer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["cli", "installer", "tracing", "serde"]
cli = ["std", "dep:clientele", "clientele?/clap"]
installer = [
    "dep:bon",
    "dep:flate2",
    "dep:reqwest",
    "dep:sha2",
    "dep:tar",
    "dep:tempfile",
    "dep:thiserror",
    "dep:tokio",
    "dep:zip",
    "serde",
    "std",
]
serde = ["dep:serde", "dep:serde_json", "dep:serde_yml"]
std = [
    "dep:asimov-env",
    "dep:getenv",
    "dep:thiserror",
    "clientele?/std",
    "dogma/std",
    "getenv?/std",
    "serde?/std",
    "serde_json?/std",
    "sha2?/std",
    "slab/std",
    "tracing?/std",
    "tracing-subscriber?/fmt",
    "tracing-subscriber?/std",
    "url/std",
]
tracing = ["dep:tracing", "dep:tracing-subscriber", "clientele?/tracing"]
unstable = []
serde_json = ["dep:serde_json"]

[dependencies]
asimov-env = { workspace = true, optional = true }
asimov-module.workspace = true
bon = { workspace = true, optional = true }
clientele = { workspace = true, features = [
    "argfile",
    "dotenv",
    "wild",
], optional = true }
dogma.workspace = true
getenv = { workspace = true, optional = true }
reqwest = { version = "0.12", default-features = false, optional = true, features = [
    "json",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
secrecy.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_yml = { workspace = true, optional = true }
sha2 = { version = "0.10.9", default-features = false, optional = true }
slab = { version = "0.4.10", default-features = false }
tempfile = { version = "3.20", default-features = false, optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["fs"] }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
url = { workspace = true, optional = true }

zip = { version = "4", optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
