[package]
name = "asimov-kb"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["tracing"]
std = ["bs58/std", "dogma/std", "uuid/std"]
tracing = []
unstable = []

# Integrations:
clap = ["dep:clap"]
eloquent = ["dep:eloquent"]
libsql = ["dep:libsql"]
rocket = ["dep:rocket"]
serde = ["dep:serde"]
turso = ["dep:turso"]

[dependencies]
bs58 = { version = "0.5", default-features = false }
derive_more = { version = "2", features = ["display"] }
dogma.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.19", default-features = false, features = ["serde", "v7"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.19", default-features = false, features = ["js", "serde", "v7"] }

# Integrations:
clap = { version = "4.5", default-features = false, features = ["derive", "std"], optional = true }
eloquent = { version = "2.0", default-features = false, optional = true }
libsql = { version = "0.9", default-features = false, optional = true }
rocket = { version = "0.5", default-features = false, optional = true }
serde = { workspace = true, optional = true }
turso = { version = "0.3", default-features = false, optional = true }
