[package]
name = "asimov-kb"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["new", "tracing"]
new = ["blake3", "uuid"]
std = ["asimov-core/std", "bs58/std", "uuid/std"]
tracing = []
unstable = []

# Integrations:
blake3 = ["dep:blake3"]
clap = ["dep:clap"]
eloquent = ["dep:eloquent"]
iroh = ["dep:iroh-blobs"]
libsql = ["dep:libsql"]
p2panda = ["dep:p2panda-core"]
rocket = ["dep:rocket"]
serde = ["dep:serde"]
turso = ["dep:turso"]
uuid = ["dep:uuid"]

[dependencies]
asimov-core.workspace = true
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
derive_more = { version = "2", features = ["display"] }

# Integrations:
blake3 = { version = "1.8", default-features = false, optional = true }
clap = { version = "4.5", default-features = false, features = ["derive", "std"], optional = true }
eloquent = { workspace = true, optional = true }
iroh-blobs = { version = "0.97", default-features = false, optional = true }
libsql = { version = "0.9", default-features = false, optional = true }
p2panda-core = { version = "0.4", default-features = false, optional = true }
rocket = { version = "0.5", default-features = false, optional = true }
serde = { workspace = true, optional = true }
turso = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.19", default-features = false, features = ["serde", "v7"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.19", default-features = false, features = ["js", "serde", "v7"], optional = true }
