# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-kb"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.readme]
title = "ASIMOV.rs: Knowledge Base"

[features]
default = ["all", "std"]
all = ["new", "tracing"]
new = ["blake3", "uuid"]
std = ["asimov-core/std", "bs58/std", "uuid/std"]
tracing = []
unstable = []

# Interoperability:
async-graphql = ["dep:async-graphql"]
blake3 = ["dep:blake3"]
clap = ["dep:clap"]
eloquent = ["dep:eloquent"]
iroh = ["dep:iroh-blobs"]
libsql = ["dep:libsql"]
p2panda = ["dep:p2panda-core"]
rocket = ["dep:rocket"]
serde = ["dep:serde", "dep:serde_with"]
turso = ["dep:turso"]
uuid = ["dep:uuid"]

[dependencies]
asimov-core.workspace = true
bs58.workspace = true
derive_more = { workspace = true, features = ["display"] }

# Interoperability:
async-graphql = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive", "std"], optional = true }
eloquent = { workspace = true, optional = true }
iroh-blobs = { workspace = true, optional = true }
libsql = { workspace = true, optional = true }
p2panda-core = { workspace = true, optional = true }
rocket = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
turso = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { workspace = true, features = ["serde", "v7"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js", "serde", "v7"], optional = true }

# Preview locally with: RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
