[package]
name = "asimov-ledger"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["api-bindings", "cryptography::cryptocurrencies"]
publish.workspace = true

[features]
default = ["all", "std"]
all = ["tracing"]
std = ["dogma/std"]
tracing = []
unstable = []

[dependencies]
alloy = { workspace = true, features = ["contract", "sol-types"] }
dogma.workspace = true
