# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-ledger"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["api-bindings", "cryptography::cryptocurrencies"]
publish.workspace = true

[package.metadata.readme]
title = "ASIMOV.rs: Ledger Types"

[features]
default = ["all", "std"]
all = []
std = ["asimov-core/std"]
unstable = []

# Features:
tracing = []

[dependencies]
alloy = { workspace = true, features = ["contract", "sol-types"] }
asimov-core.workspace = true
