[package]
name = "asimov-nexus"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["tracing"]
std = ["asimov-core/std"]
tracing = []
unstable = []

# Integrations:
validator = ["dep:validator"]

[dependencies]
asimov-core.workspace = true
asimov-kb.workspace = true
derive_more = { version = "2", features = ["display"] }
serde.workspace = true

# Integrations:
validator = { version = "0.16.1", features = ["derive"], optional = true }
