[package]
name = "asimov-patterns"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["text-processing", "parsing", "rust-patterns"]
publish.workspace = true

[features]
default = ["all", "std"]
all = []
std = []
unstable = []

[dependencies]
async-trait.workspace = true
bon.workspace = true
rdf-model.workspace = true
typed-builder.workspace = true
