# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-patterns"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["text-processing", "parsing", "rust-patterns"]
publish.workspace = true

[package.metadata.readme]
title = "ASIMOV.rs: Program Patterns"

[features]
default = ["all", "std"]
all = []
std = ["asimov-core/std"]
unstable = []

# Features:
tracing = []

[dependencies]
asimov-core.workspace = true
async-trait.workspace = true
bon.workspace = true
rdf-model.workspace = true
