# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["api-bindings", "data-structures", "network-programming"]
publish.workspace = true

[package.metadata.readme]
title = "ASIMOV.rs: Protocol Client"

[features]
default = ["all", "std"]
all = []
std = ["asimov-core/std"]
unstable = []

# Features:
tracing = []

[dependencies]
asimov-core.workspace = true
iroh.workspace = true
iroh-metrics.workspace = true
n0-error.workspace = true
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
iroh-services.workspace = true
iroh-tickets.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
