# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["api-bindings", "data-structures", "network-programming"]
publish.workspace = true

[package.metadata.readme]
title = "ASIMOV.rs: P2P Protocol"

[features]
default = ["all", "std"]
all = ["csv", "random"]
std = ["asimov-core/std"]
unstable = []

# Features:
csv = ["dep:csv-async", "tokio/fs"]
random = ["dep:fastrand"]
tracing = []

[dependencies]
asimov-core.workspace = true
asimov-id = { workspace = true, features = ["iroh"] }
asimov-kb = { workspace = true, features = ["serde"] }
async-stream.workspace = true
bytes.workspace = true
futures-lite.workspace = true
heapless = { workspace = true, features = ["serde"] }
iroh = { workspace = true, features = ["metrics", "fast-apple-datapath", "portmapper", "tls-ring"] }
iroh-gossip = { workspace = true, features = ["metrics", "net"] }
iroh-metrics.workspace = true
iroh-tickets.workspace = true
known-errors.workspace = true
n0-error.workspace = true
postcard.workspace = true
rdf-hash = { workspace = true, features = ["blake3"] }
rdf-model.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }

# Features:
csv-async = { workspace = true, features = ["tokio"], optional = true }
fastrand = { workspace = true, optional = true }

[dev-dependencies]
iroh-services.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true

# Preview locally with: RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
