[package]
name = "asimov-proxy"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["tracing"]
std = ["dogma/std", "gofer/std"]
tracing = []
unstable = []

[dependencies]
dogma.workspace = true
gofer.workspace = true
miette.workspace = true
thiserror.workspace = true
