[package]
name = "asimov-proxy"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.readme]
title = "ASIMOV.rs: Proxy"

[features]
default = ["all", "std"]
all = []
std = ["asimov-core/std", "gofer/std"]
unstable = []

# Features:
tracing = []

[dependencies]
asimov-core.workspace = true
gofer.workspace = true
miette.workspace = true
thiserror.workspace = true
