[package]
name = "asimov-registry"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["cli", "tracing"]
cli = ["std", "dep:clientele", "clientele?/clap"]
std = [
	"dep:asimov-env",
	"dep:getenv",
	"clientele?/std",
	"dogma/std",
	"getenv?/std",
	"serde/std",
	"serde_json/std",
	"tracing?/std",
	"tracing-subscriber?/fmt",
	"tracing-subscriber?/std",
]
unstable = []

# Optional features:
tracing = ["dep:tracing", "dep:tracing-subscriber", "clientele?/tracing"]

[dependencies]
asimov-module.workspace = true
bon.workspace = true
dogma.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }

# Optional dependencies:
asimov-env = { workspace = true, optional = true }
clientele = { workspace = true, optional = true }
getenv = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
