# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-registry"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.readme]
title = "ASIMOV.rs: Registry Client"

[features]
default = ["all", "std"]
all = ["cli", "tracing", "asimov-env?/all"]
cli = ["std", "dep:clientele", "clientele?/clap"]
std = [
    "asimov-core/std",
    "asimov-module/std",
    "dep:asimov-env",
    "asimov-env?/std",
    "dep:getenv",
    "clientele?/std",
    "getenv?/std",
    "serde/std",
    "serde_json/std",
    "tracing?/std",
    "tracing-subscriber?/fmt",
    "tracing-subscriber?/std",
]
unstable = []

# Optional features:
tracing = ["dep:tracing", "dep:tracing-subscriber", "clientele?/tracing"]

[dependencies]
asimov-core.workspace = true
asimov-module = { workspace = true, features = ["all"] }
bon.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }

# Optional dependencies:
asimov-env = { workspace = true, optional = true }
clientele = { workspace = true, optional = true }
getenv = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
