[package]
name = "asimov-runner"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["tracing"]
std = ["clientele/std", "dogma/std", "tracing?/std"]
tracing = ["dep:tracing"]
unstable = []

[dependencies]
asimov-patterns.workspace = true
async-trait.workspace = true
clientele.workspace = true
dogma.workspace = true
stability.workspace = true
tokio = { version = "1", default-features = false, features = ["process"] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
