[package]
name = "asimov-runner"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["tracing"]
std = ["clientele/std", "dogma/std", "tracing?/std"]
tracing = ["dep:tracing"]
unstable = []

[dependencies]
asimov-env.workspace = true
asimov-patterns.workspace = true
asimov-prompt.workspace = true
async-trait.workspace = true
clientele.workspace = true
derive_more = { workspace = true, features = ["debug"] }
dogma.workspace = true
tokio = { workspace = true, features = ["process"] }

# Optional dependencies:
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
