[package]
name = "asimov-runner"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.readme]
title = "ASIMOV.rs: Runner"

[features]
default = ["all", "std"]
all = ["tracing"]
std = ["asimov-core/std", "clientele/std", "tracing?/std"]
tracing = ["dep:tracing"]
unstable = []

[dependencies]
asimov-core.workspace = true
asimov-env = { workspace = true, default-features = true }
asimov-module = { workspace = true, default-features = true }
asimov-patterns = { workspace = true, default-features = true }
asimov-prompt = { workspace = true, default-features = true }
async-trait.workspace = true
clientele.workspace = true
derive_more = { workspace = true, features = ["debug"] }
tokio = { workspace = true, features = ["io-util", "process", "rt"] }

# Optional dependencies:
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
