[package]
name = "asimov-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["api-bindings", "data-structures", "text-processing"]
publish = false

[features]
default = ["all", "std"]
all = ["derive", "serde", "tracing"]
derive = []
serde = ["asimov-core/serde"]
std = ["asimov-core/std", "asimov-sys/std", "tokio?/full"]
tokio = ["dep:tokio"]
tracing = []
unstable = ["asimov-core/unstable", "asimov-sys/unstable"]
web = []

[build-dependencies]
cfg_aliases.workspace = true

[dependencies]
asimov-core.workspace = true
asimov-sys.workspace = true
stability.workspace = true

# Optional dependencies:
tokio = { workspace = true, optional = true }

[target.'cfg(not(wasm))'.dependencies]

[target.'cfg(wasm)'.dependencies]
