[package]
name = "asimov-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["api-bindings", "data-structures", "text-processing"]
publish = false

[features]
default = ["all", "std"]
all = ["derive", "serde", "tokio", "tracing"]
std = ["asimov-core/std", "tokio?/full"]
unstable = ["asimov-core/unstable"]

# Features:
derive = []

# Integrations:
serde = ["asimov-core/serde"]
tokio = ["dep:tokio"]
tracing = ["asimov-core/tracing"]

[dependencies]
asimov-core.workspace = true

# Integrations:
tokio = { workspace = true, optional = true }
