[package]
name = "asimov-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
#rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["api-bindings", "data-structures", "text-processing"]
publish = true

[package.metadata.readme]
title = "ASIMOV.rs"

[features]
default = ["all", "std"]
all = [
    # Packages:
    "config",
    "core",
    "credit",
    "env",
    "flow",
    "id",
    "installer",
    "kb",
    "module",
    "patterns",
    "prompt",
    "registry",
    "runner",
    "snapshot",
    # Features:
    "tracing",
]
std = [
    "asimov-config?/std",
    "asimov-core?/std",
    "asimov-credit?/std",
    "asimov-env?/std",
    "asimov-flow?/std",
    "asimov-id?/std",
    "asimov-installer?/std",
    "asimov-kb?/std",
    "asimov-module?/std",
    "asimov-patterns?/std",
    "asimov-prompt?/std",
    "asimov-registry?/std",
    "asimov-runner?/std",
    "asimov-snapshot?/std",
]
unstable = ["asimov-core?/unstable"]

# Packages:
config = ["dep:asimov-config"]
core = ["dep:asimov-core"]
credit = ["dep:asimov-credit"]
env = ["dep:asimov-env"]
flow = ["dep:asimov-flow"]
id = ["dep:asimov-id"]
installer = ["dep:asimov-installer"]
kb = ["dep:asimov-kb"]
module = ["dep:asimov-module"]
patterns = ["dep:asimov-patterns"]
prompt = ["dep:asimov-prompt"]
registry = ["dep:asimov-registry"]
runner = ["dep:asimov-runner"]
snapshot = ["dep:asimov-snapshot"]

# Features:
derive = []

# Integrations:
serde = ["asimov-core?/serde"]
tokio = ["asimov-flow?/tokio"]
tracing = ["asimov-core?/tracing", "asimov-installer?/tracing"]

[dependencies]
asimov-config = { workspace = true, optional = true }
asimov-core = { workspace = true, optional = true }
asimov-credit = { workspace = true, optional = true }
asimov-env = { workspace = true, optional = true }
asimov-flow = { workspace = true, optional = true }
asimov-id = { workspace = true, optional = true }
asimov-installer = { workspace = true, optional = true }
asimov-kb = { workspace = true, optional = true }
asimov-module = { workspace = true, optional = true }
asimov-patterns = { workspace = true, optional = true }
asimov-prompt = { workspace = true, optional = true }
asimov-registry = { workspace = true, optional = true }
asimov-runner = { workspace = true, optional = true }
asimov-snapshot = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
